@@ -2133,6 +2133,9 @@ quality of the weapon; you are free to manually fill your quiver with
 the `Q' command instead.  If no weapon is found or the option is
 false, the `t' (throw) command is executed instead.  (default false)
 %.lp
+\item[\ib{autounlock}]
+Automatically apply unlocking tool when trying to open a locked door (default true).
+%.lp
 \item[\ib{boulder}]
 Set the character used to display boulders (default is rock class symbol).
 %.lp
